# scratch-pad

./: .gitignore  ARCHITECTURE.md  CONTACT_MODEL_PARAMETERS.md  GEOMETRIC_CONSTRAINTS.md  PING_PONG_ANALYSIS.md  README.md  SIMULATION_ENHANCEMENTS.md  app.py  pyproject.toml  robot_simulation.py
.cursor/: development-workflow.mdc  self-improvement.mdc
robot/: __init__.py  analysis.py  contact.py  dynamics.py  geometry.py  params.py  simulator.py  spacing_analysis.py  state.py
tests/: __init__.py  test_contact_forces.py  test_contact_forces_advanced.py  test_dynamics.py  test_geometric_constraints.py  test_integration.py  test_robot_params.py  test_simulation.py  test_stability_analysis.py
