[project]
name = "mytra-robot-simulation"
version = "0.1.0"
description = "Simulation and analysis tool for Mytra warehouse robot guide wheel spacing"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.11.0"
pytest = "^8.3.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=2.0.0", "poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.0"
scipy = "^1.13.0"
dash = "^2.14.0"
plotly = "^5.17.0"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    ".venv",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "*.pyi",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
docstring-code-format = true
exclude = [
    ".venv",
    "build",
    "dist",
]

